feature/character-tag, 태그 기능 개발 및 캐릭터 아이템 클릭시 해당 위치로 바로 이동하도록하는 모달 기능 생성